Reworked the purging system.